deleted func update transaction and fixed a couple of bags